fix: Mobile Opera v50 (Legacy Browser for Android >= 4.2.2 JellyBean) crashes on some pages
- Render SVG with object tag instead of img tag
- Render PNG background images with progressive upgrade to SVG in CSS if supported
- Slide content is not visible because CSS height cannot be inferred from max-height

--- a/client/src/layouts/GasLayout.scss
+++ b/client/src/layouts/GasLayout.scss
@@ -11,7 +11,8 @@ body {
     justify-content: end;
     text-align: left;
     padding-left: 130px;
-    background-image: url("/images/vecteezy_set-of-butterflies-of-different-shapes_7783387_243/vecteezy_set-of-butterflies-of-different-shapes_7783387-transparent.svg");
+    background: url("/images/vecteezy_set-of-butterflies-of-different-shapes_7783387_243/vecteezy_set-of-butterflies-of-different-shapes_7783387-transparent.png");
+    background-image: url("/images/vecteezy_set-of-butterflies-of-different-shapes_7783387_243/vecteezy_set-of-butterflies-of-different-shapes_7783387-transparent.svg"), none;
     background-size: 100px;
     background-repeat: no-repeat;
     background-position: 15px center;
