--- a/client/src/pages/Attributions.scss
+++ b/client/src/pages/Attributions.scss
@@ -27,7 +27,8 @@
     text-align: center;
 }
 
-.attribution-image img {
+.attribution-image img,
+.attribution-image .img {
     max-width: 100%;
     max-height: 100%;
     width: 100%;
