--- a/client/src/pages/songleader/sing.scss
+++ b/client/src/pages/songleader/sing.scss
@@ -47,7 +47,7 @@
             .song-tile-container {
                 width: 100%;
                 height: 20vh;
-                background: url('/images/vecteezy_music-notes-rainbow-colourful-on-white-background_7206554_442/vecteezy_music-notes-rainbow-colourful-on-white-background_7206554-transparent.svg') no-repeat center center;
+                background: url('/images/vecteezy_music-notes-rainbow-colourful-on-white-background_7206554_442/vecteezy_music-notes-rainbow-colourful-on-white-background_7206554-transparent.png') no-repeat center center;
                 background-size: cover;
 
                 .tile {
@@ -183,7 +183,8 @@
             padding: 0.5em;
 
             .slide-tile-container {
-                min-height: 28vh;
+                height: 28vh;
+                
 
                 .tile {
                     border: solid 1px gray;
@@ -303,7 +304,9 @@
             }
 
             text-align: center;
-            background: url('/images/vecteezy_empty-projection-screen-vector-design-illustration-isolated-on-white-background_1214033/projection_screen-edited-transparent.svg') no-repeat center;
+            background: url('/images/vecteezy_empty-projection-screen-vector-design-illustration-isolated-on-white-background_1214033/projection_screen-edited-transparent.png') no-repeat center;
+            background-image: url('/images/vecteezy_empty-projection-screen-vector-design-illustration-isolated-on-white-background_1214033/projection_screen-edited-transparent.svg'),
+            none;
             background-size: 100% 100%;
             width: 100%;
             height: 50%;
@@ -338,7 +341,7 @@
             width: 100%;
             height: 40%;
             text-align: center;
-            background: url('/images/vecteezy_photo-negative-illustration-vector-elements_171597/Nov009-transparent.svg') no-repeat center;
+            background: url('/images/vecteezy_photo-negative-illustration-vector-elements_171597/Nov009-transparent.png') no-repeat center;
             background-size: 90% 90%;
             position: relative;
             cursor: pointer;
